Fixing: work experience section on mobile view

--- a/style.css
+++ b/style.css
@@ -588,7 +588,7 @@ span {
   margin-top: 3rem;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 767px) {
   .work-experience {
     flex-direction: column;
   }
